--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>Hello! My name is Luyinga Lumbale Leonard and I am from Kinshasa D.R.Congo I enjoy reading and play football. I am actually living in Cape Town. I am married and have two children. I am doing web design because I want to know how to create websites.</p>
   </main>
   <footer>
-    <p>&copy; 2024 &clubs; Luyinga Lumbale Leonard &clubs; Cape Town, South Africa</p>
+    <p>&copy; 2024 &clubs; Luyinga Lumbale Leonard &clubs; Cape Town, South Africa.</p>
   </footer>  
 </body>
 </html>
